# BEAST-Centralized

./: README.md
.github/workflows/: backend.yml  frontend.yml
Centralized/: .env.dev  .env.prod  docker-compose.yaml
Centralized/Backend/: .gitignore  Dockerfile  pyproject.toml
Centralized/Backend/Authentication/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
Centralized/Backend/Backend/: database_router.py  settings.py  urls.py
Centralized/Backend/Backend/Backend/: settings.py  urls.py
Centralized/frontend/: Dockerfile  package-lock.json  package.json
Centralized/frontend/src/: App.js  index.js
Centralized/frontend/src/Contexts/: AuthContext.jsx
Centralized/frontend/src/Hooks/: useLogin.jsx  useSignup.jsx
Centralized/nginx/: nginx.conf
MyBeastSummerILP-main/: .env.dev  .env.prod  docker-compose.yaml
MyBeastSummerILP-main/Backend/: Dockerfile  pyproject.toml
MyBeastSummerILP-main/Backend/Authentication/: admin.py  models.py  options.py  serializers.py  urls.py  views.py
MyBeastSummerILP-main/Backend/Backend/: settings.py
MyBeastSummerILP-main/Backend/Blog/: admin.py  models.py  serializers.py
MyBeastSummerILP-main/Backend/Projects/: admin.py  options.py  views.py
MyBeastSummerILP-main/Backend/Registrations/: admin.py  models.py  views.py
MyBeastSummerILP-main/Backend/projectData/: projects.csv
MyBeastSummerILP-main/Frontend/: Dockerfile  package-lock.json  package.json
MyBeastSummerILP-main/Frontend/src/: verifyUser.js
MyBeastSummerILP-main/nginx/: Dockerfile
(+19 files in other folders)
