[tool.poetry]
name = "Backend"
version = "0.1.0"
description = ""
authors = ["Abdiitb <aryan223653badkul@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
django-cors-headers = "^4.7.0"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.5.0"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"
dotenv = "^0.9.9"

# Dev-only packages
[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
